[gd_scene load_steps=3 format=2]

[ext_resource path="res://script/obstacle.gd" type="Script" id=1]
[ext_resource path="res://scene/DepthController.tscn" type="PackedScene" id=3]

[node name="Obstacle" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
build_mode = 1
polygon = PoolVector2Array( 0, 0, 50, 0, 50, 50 )

[node name="DepthController" parent="." instance=ExtResource( 3 )]

[node name="Tween" type="Tween" parent="."]

[connection signal="hide" from="DepthController" to="." method="_on_hide"]
[connection signal="show" from="DepthController" to="." method="_on_show"]
